# libsoup-websocket-demo

./: .gitmodules  CMakeLists.txt  README.md
native_client/: CMakeLists.txt  main.c
native_server/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/client/: client.c  client.h
src/server/: server.c  server.h
src/utils/: audio_loader.cpp  audio_loader.h  logger.h
